<resources>

    <!-- App Strings -->
    <string name="app_name">Popular Movies</string>
    <string name="appTitle">Popular Movies</string>

    <!-- Network Strings -->
    <string name="network_error">No Network Connection!!</string>
    <string name="no_internet">Please enable Wi-Fi or mobile data to connect internet</string>

    <!-- Menu Strings -->
    <string name="logout">Logout</string>
    <string name="refresh">Refresh</string>

    <!-- Login Strings -->
    <string name="login">Login</string>
    <string name="loginSuccess">Login Success…</string>
    <string name="loginCredentialsFailure">Username and/or Password are incorrect!!</string>

    <!-- Url Strings -->
    <string name="image_url">http://image.tmdb.org/t/p/w342</string>
    <string name="image_url_500">http://image.tmdb.org/t/p/w500</string>

    <!-- UI Strings -->
    <string name="retry">Retry</string>
    <string name="hint_password">Password</string>
    <string name="hint_username">Username</string>
    <string name="movie_popular">Most Popular</string>
    <string name="movie_vote_count">Vote Count</string>
    <string name="string_label_rating">Rating</string>
    <string name="movie_latest">Latest Release</string>
    <string name="string_label_release_date">Release Date</string>
    <string name="minutes">mins</string>
    <string name="string_imdb">Imdb</string>
    <string name="string_button_movie_home">Movie Home</string>
    <string name="url">page_url</string>
    <string name="no_page_found">No Page Found</string>
    <string name="videos">Videos</string>
    <string name="button_review">User Reviews</string>
    <string name="timber_reviews_fetched">Reviews fetched.</string>
    <string name="button_read_more">Read More</string>
    <string name="timber_no_results">No results available.</string>
    <string name="no_user_reviews_available">Reviews Not Available</string>
    <string name="menu_item_favorite">Favorite</string>
    <string name="movie_favorite">Favorites</string>
    <string name="dismiss">Dismiss</string>
    <string name="exit">Exit</string>
    <string name="dialog_exit_title">Exit?</string>
    <string name="dialog_exit_app">Do you want to Exit the app?</string>
    <string name="movie_title">movie_title</string>

</resources>