<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/bn_movie_latest"
        android:icon="@mipmap/icon_movies"
        android:title="@string/movie_latest"
        app:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/bn_movie_popular"
        android:icon="@mipmap/icon_popular"
        android:title="@string/movie_popular"
        app:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/bn_movie_vote_count"
        android:icon="@mipmap/icon_vote_count"
        android:title="@string/movie_vote_count"
        app:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/bn_movie_favorites"
        android:icon="@drawable/icon_favorites"
        android:title="@string/movie_favorite"
        app:showAsAction="ifRoom"
        />
</menu>