<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:custom="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                tools:context=".ui.mvp.login.LoginActivity">

    <TextView
        android:id="@+id/label_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:text="@string/login"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="24sp"
        android:textStyle="bold"
        />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/label_login"
        android:fontFamily="sans-serif"
        android:hint="@string/hint_username"
        android:inputType="text"
        android:maxLines="1"
        android:textSize="18sp"/>

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/username"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:fontFamily="sans-serif"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:maxLines="1"
        android:textSize="18sp"/>

    <com.dd.processbutton.iml.ActionProcessButton
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/password"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:paddingEnd="20dp"
        android:paddingStart="20dp"
        android:text="@string/login"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        custom:pb_colorComplete="@color/green_complete"
        custom:pb_colorError="@color/red_error"
        custom:pb_colorNormal="@color/colorPrimaryDark"
        custom:pb_colorPressed="@color/colorPrimary"
        custom:pb_colorProgress="@color/purple_progress"
        custom:pb_textComplete="Success"
        custom:pb_textError="Error"
        custom:pb_textProgress="Loading"/>

    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:visibility="gone"/>

</RelativeLayout>
